# space_invaders

./: CMakeLists.txt  README.md
examples/: load_image.cpp  minimal_glfw_example.cpp  render_buffer.cpp  texture_mapping.cpp  texture_mapping_glfw.cpp  texture_mapping_glut.cpp
include/space_invaders/: aabb.h  animation.h  common.h  constants.h  entity.h  game.h  interface.h  load_image.h  utils.h
src/: aabb.cpp  animation.cpp  common.cpp  entity.cpp  game.cpp  interface.cpp  load_image.cpp  main.cpp  minimal_glfw_example.cpp  utils.cpp
